--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
                     <canvas id="critical-canvas" width="300" height="600"></canvas>
                 </div>
             </section>
+
+            <section class="panel">
+                <h2 class="algo-title" title="Each row distributes 1 unit of blame equally among all distinct pieces present in that row. A piece's total value is the sum of its fractional shares. The sum always equals total height.">Uniform</h2>
+                <p class="algo-desc">Equal blame per row, sums to height</p>
+                <p class="sum-display">Σ = <span id="sum-uniform">0</span></p>
+                <div class="board-container">
+                    <canvas id="uniform-canvas" width="300" height="600"></canvas>
+                </div>
+            </section>
         </main>
     </div>
 
